11/9/23:
-Overhaul of asset manager, full switch to binary asset serialization and code improvements
-Further general asset/project management improvements

9/9/23:
-Mesh default material system removed - just considering meshes pure vertex data now
-Editor mesh asset management fixes and improvements

8/9/23:
-Safer script execution - deletion queue and try-catches


7/9/23:
-Fixed physx collision callback system - nothing to do with fmod but urgently needed doing, memory corruption and crashes

2/9/23:
-Asset manager window class and ExtraUI created, editorlayer refactoring
-Physics comp editor added back bodytype changing
-Asset management changes - more stable file management
-Basic audio integration - needs a lot more work but positional works now


31/8/23:
-Material drag and drop fix


30/8/23:
-Physics collision callbacks in scripts
-MeshInstanceGroup improper sorting fixed
-/DEBUG linker flag removed when compiling scripts in release 
-Merged physics components back into one class - prevents having to cast everywhere

29/08/23:
-Play/simulate button in editor that saves previous state
-Serialization/project validation changes
-Scripts connected to physics
-Raycasting

26/8/23:
-Basic C++ scripting engine, runtime compilation/connecting of external c++ scripts to entities (currently only msvc supported)
-Split physicscomponent into PhysicsComponentStatic and PhysicsComponentDynamic
-Runtime reloading of scripts
-UI integration with scripts
-UI improvements, error window
-Env map diffuse prefilter serialization for faster loading


22/8/23:
-Concept of projects and project management added
-3D Mesh/material asset previews in editor
-Large UI changes in editor
-Asset management improved, serialized/clone asset files kept with project files
-Fixed some entity/transform hierarchy bugs
-Mesh asset binary serialization
-Some vol. fog changes/fixes


16/8/23:
-Some work on binary asset serialization
-Async mesh/texture loading